@@ -1,11 +1,12 @@
 package ar.edu.unq.tusViajes.service;
 
 import ar.edu.unq.tusViajes.builder.AgenciaBuilder;
-import ar.edu.unq.tusViajes.controller.dto.request.AgenciaRequestDTO;
+import ar.edu.unq.tusViajes.controller.dto.request.CreateAgenciaRequestDTO;
 import ar.edu.unq.tusViajes.controller.dto.response.AgenciaResponseDTO;
 import ar.edu.unq.tusViajes.exception.DuplicateResourceException;
 import ar.edu.unq.tusViajes.exception.ResourceNotFoundException;
 import ar.edu.unq.tusViajes.model.Agencia;
+import ar.edu.unq.tusViajes.model.EstadoAgencia;
 import ar.edu.unq.tusViajes.repository.AgenciaRepository;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -31,7 +32,6 @@ public class AgenciaServiceTest {
     @ServiceConnection
     static PostgreSQLContainer<?> postgres = new PostgreSQLContainer<>("postgres:16-alpine");
 
-    
     @Autowired
     private AgenciaService agenciaService;
 
@@ -40,17 +40,16 @@ public class AgenciaServiceTest {
 
     @Test
     void listar_retornaTodasLasAgenciasDeLaBaseDeDatos() {
-        
         Agencia guardada = agenciaRepository.save(AgenciaBuilder.anAgencia().build());
 
         List<AgenciaResponseDTO> resultado = agenciaService.listar();
 
         assertThat(resultado).isNotEmpty();
-        assertEquals(resultado.get(0).razonSocial(),guardada.getRazonSocial());
+        assertEquals(resultado.getFirst().razonSocial(), guardada.getRazonSocial());
     }
 
     @Test
-    void buscarPorId_devuelveLaAgenciaCuandoExisteEnPostgres() {
+    void buscarPorId_devuelveLaAgencia() {
         Agencia guardada = agenciaRepository.save(
                 AgenciaBuilder.anAgencia().withRazonSocial("Huryn").withCuit("20-44576859-8").build()
         );
@@ -62,32 +61,79 @@ public class AgenciaServiceTest {
     }
 
     @Test
-    void buscarPorId_lanzaExcepcionCuandoNoExisteEnPostgres() {
+    void buscarPorId_lanzaExcepcionCuandoNoExiste() {
         assertThatThrownBy(() -> agenciaService.buscarPorId(99999L))
                 .isInstanceOf(ResourceNotFoundException.class);
     }
 
     @Test
     void crear_guardaYDevuelveLaAgenciaPersistida() {
-        AgenciaRequestDTO dto = new AgenciaRequestDTO("Viajes del Norte", "30-99887766-1");
+        CreateAgenciaRequestDTO dto = new CreateAgenciaRequestDTO("Viajes del Norte", "30-99887766-1");
 
         AgenciaResponseDTO resultado = agenciaService.crear(dto);
 
         assertThat(resultado.id()).isNotNull();
         assertThat(resultado.razonSocial()).isEqualTo("Viajes del Norte");
-
-        
         assertThat(agenciaRepository.existsById(resultado.id())).isTrue();
     }
 
     @Test
-    void crear_lanzaRecursoDuplicadoExceptionCuandoElCuitYaExisteEnPostgres() {
+    void crear_lanzaRecursoDuplicadoExceptionCuandoElCuitYaExiste() {
         agenciaRepository.save(AgenciaBuilder.anAgencia().withCuit("30-12345678-9").build());
 
-        AgenciaRequestDTO dtoDuplicado = new AgenciaRequestDTO("Otra Agencia", "30-12345678-9");
+        CreateAgenciaRequestDTO dtoDuplicado = new CreateAgenciaRequestDTO("Otra Agencia", "30-12345678-9");
 
         assertThatThrownBy(() -> agenciaService.crear(dtoDuplicado))
                 .isInstanceOf(DuplicateResourceException.class)
                 .hasMessageContaining("30-12345678-9");
+    }
+
+    @Test
+    void listarPendientes_retornaSoloAgenciasConEstadoPendiente() {
+        agenciaRepository.save(AgenciaBuilder.anAgencia()
+                .withRazonSocial("Agencia Pendiente")
+                .withCuit("30-11111111-1")
+                .withEmail("p1@agencia.com")
+                .withEstado(EstadoAgencia.PENDIENTE)
+                .build());
+
+        agenciaRepository.save(AgenciaBuilder.anAgencia()
+                .withRazonSocial("Agencia Autorizada")
+                .withCuit("30-22222222-2")
+                .withEmail("a1@agencia.com")
+                .withEstado(EstadoAgencia.AUTORIZADA)
+                .build());
+
+        List<AgenciaResponseDTO> pendientes = agenciaService.listarPendientes();
+
+        assertThat(pendientes).allMatch(a -> a.estado() == EstadoAgencia.PENDIENTE);
+    }
+
+    @Test
+    void autorizar_cambiaEstadoAAutorizada() {
+        Agencia guardada = agenciaRepository.save(AgenciaBuilder.anAgencia()
+                .withEstado(EstadoAgencia.PENDIENTE)
+                .build());
+
+        AgenciaResponseDTO autorizada = agenciaService.autorizar(guardada.getId());
+
+        assertThat(autorizada.estado()).isEqualTo(EstadoAgencia.AUTORIZADA);
+        Agencia enDb = agenciaRepository.findById(guardada.getId()).orElseThrow();
+        assertThat(enDb.isAutorizada()).isTrue();
+        assertThat(enDb.isActivo()).isTrue();
+    }
+
+    @Test
+    void rechazar_cambiaEstadoARechazada() {
+        Agencia guardada = agenciaRepository.save(AgenciaBuilder.anAgencia()
+                .withEstado(EstadoAgencia.PENDIENTE)
+                .build());
+
+        AgenciaResponseDTO rechazada = agenciaService.rechazar(guardada.getId());
+
+        assertThat(rechazada.estado()).isEqualTo(EstadoAgencia.RECHAZADA);
+        Agencia enDb = agenciaRepository.findById(guardada.getId()).orElseThrow();
+        assertThat(enDb.isAutorizada()).isFalse();
+        assertThat(enDb.isActivo()).isFalse();
     }
 }
